--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,23 +1,21 @@
 <div id="about-me" class="container">
   <div class="about-me">
-    
-
     <div class="about-me-container">
-      <div class="text-section">
+      <div class="text-section" data-aos="fade-right"> <!-- Animation beim Scrollen -->
         <h1>About Me</h1>
         <p class="about-text">
           I'm a Frontend Developer based in Datteln, near Dortmund. My passion for technology and design drives me to create dynamic and engaging websites. I’ve honed my skills through a retraining program, all while balancing a full-time job as a special education teacher. My background has instilled in me qualities like adaptability, problem-solving, and dedication—traits that serve me well in both teaching and software development. I’m excited to contribute to innovative projects and continue growing in the evolving world of web development.
         </p>
         <div class="info-section">
-          <div class="info-item">
+          <div class="info-item" data-aos="fade-up"> <!-- Animation beim Scrollen -->
             <img src="assets/icons/location.png" alt="Icon 1">
             <p>Adaptable to various work settings, I am equally comfortable working on-site or remotely.</p>
           </div>
-          <div class="info-item">
+          <div class="info-item" data-aos="fade-up"> <!-- Animation beim Scrollen -->
             <img src="assets/icons/bulb.png" alt="Icon 2">
             <p>I embrace new ideas and am constantly seeking personal challenges to enhance my knowledge and skills.</p>
           </div>
-          <div class="info-item">
+          <div class="info-item" data-aos="fade-up"> <!-- Animation beim Scrollen -->
             <img src="assets/icons/puzzle.svg" alt="Icon 3">
             <p>For me, programming is more than just coding—it's about solving problems in creative ways. I enjoy breaking down complex issues into easy-to-use solutions, helping you reach your goals and make your ideas a reality.</p>
           </div>
@@ -25,7 +23,7 @@
       </div>
 
       <!-- Einfaches Bild ohne Kreis -->
-      <div class="image-section">
+      <div class="image-section" data-aos="zoom-in"> <!-- Animation beim Scrollen -->
         <img src="assets/img/self/transparent_portfolio_picture.png" alt="Profile Image" class="simple-profile-image">
       </div>
     </div>
