--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -1,42 +1,43 @@
 <div id="portfolio" class="portfolio-main">
     <div class="portfolio">
-        <div class="portfolio-header">
-            <img class="vector1" src="../../assets/vectors/vector_1.png" alt="vector">
-            <h1>Portfolio</h1>
-            <img class="vector2" src="../../assets/vectors/vector_1.png" alt="vector">
-        </div>
-        <div class="portfolio-description">
-            <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
-        </div>
-
-        <div class="portfolio-container">
-            <div class="portfolio-item">
-                <img src="../../assets/img/self/join.png" alt="Project Image" class="portfolio-image">
-                <div class="portfolio-text">
-                    <h2>Join</h2>
-                    <p class="project-tools">Angular | TypeScript | HTML | CSS | Firebase</p>
-                    <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
-                    <div class="text-buttons">
-                    <!-- Verwende <a> statt <button> -->
-                    <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">Live test</a>
-                    <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">GitHub</a>
-                    </div>
-                </div>
+      <div class="portfolio-header" data-aos="fade-down"> <!-- Animation für die Header-Sektion -->
+        <img class="vector1" src="../../assets/vectors/vector_1.png" alt="vector">
+        <h1>Portfolio</h1>
+        <img class="vector2" src="../../assets/vectors/vector_1.png" alt="vector">
+      </div>
+      
+      <div class="portfolio-description" data-aos="fade-up"> <!-- Animation für die Beschreibung -->
+        <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
+      </div>
+  
+      <div class="portfolio-container">
+        <div class="portfolio-item" data-aos="zoom-in"> <!-- Animation für das erste Portfolio-Item -->
+          <img src="../../assets/img/self/join.png" alt="Project Image" class="portfolio-image">
+          <div class="portfolio-text">
+            <h2>Join</h2>
+            <p class="project-tools">Angular | TypeScript | HTML | CSS | Firebase</p>
+            <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
+            <div class="text-buttons">
+              <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">Live test</a>
+              <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">GitHub</a>
             </div>
-
-            <!-- Zweiter Abschnitt mit Text links und Bild rechts -->
-            <div class="portfolio-item reverse">
-                <div class="portfolio-text-2">
-                    <h2>El pollo loco</h2>
-                    <p class="project-tools">JavaScript | HTML | CSS</p>
-                    <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
-                    <div class="text-buttons">
-                        <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">GitHub</a>
-                        <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
-                    </div>
-                </div>
-                <img src="../../assets/img/self/pollo_loco.png" alt="Project Image" class="portfolio-image">
-            </div>
+          </div>
         </div>
+  
+        <!-- Zweiter Abschnitt mit Text links und Bild rechts -->
+        <div class="portfolio-item reverse" data-aos="zoom-in"> <!-- Animation für das zweite Portfolio-Item -->
+          <div class="portfolio-text-2">
+            <h2>El pollo loco</h2>
+            <p class="project-tools">JavaScript | HTML | CSS</p>
+            <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
+            <div class="text-buttons">
+              <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">GitHub</a>
+              <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
+            </div>
+          </div>
+          <img src="../../assets/img/self/pollo_loco.png" alt="Project Image" class="portfolio-image">
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  
