--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -227,6 +227,8 @@
 }
 
 @media (max-width: 645px) {
+   
+
     .contact-content {
         flex-direction: column; /* Ändert die Ausrichtung auf Spaltenrichtung */
         align-items: center; /* Zentriert den Inhalt */
@@ -244,6 +246,10 @@
 }
 
 @media screen and (max-width: 450px) {
+    .contact-container {
+        background: none;
+    }
+
     .vector {
         width: 24%;
     }
