--- a/src/app/main-content/header/header.component.scss
+++ b/src/app/main-content/header/header.component.scss
@@ -61,10 +61,11 @@ h1 {
   top: 109px; /* Direkt unter dem Header */
   right: 0; /* Am rechten Rand des Bildschirms */
   width: 100%; /* Breite des Popup-Menüs */
-  background-color: rgba(20, 29, 47, 0.5); /* Hintergrundfarbe */
+  background-color: rgba(20, 29, 47, 0.8); /* Hintergrundfarbe */
   padding: 20px; /* Innenabstand */
   z-index: 9999; /* Höherer z-index, damit es über anderen Elementen liegt */
   transition: opacity 0.3s ease; /* Weicher Übergang für das Einblenden */
+  
 }
 
 /* Klasse für sichtbares Popup-Menü */
@@ -89,12 +90,13 @@ h1 {
   padding: 30px;
   font-size: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   transition: color 0.3s ease;
 }
 
 .popup-menu-content a:hover {
   color: #70E61C; /* Hover-Farbe */
+  cursor: pointer;
 }
 
 /* Schließen-Button im Popup-Menü */
@@ -103,8 +105,14 @@ h1 {
   border: none;
   color: white;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 30px;
   padding: 10px;
+  font-weight: 700;
+
+  &:hover {
+    color: #70E61C;
+    cursor: pointer;
+  }
 }
 
 /* Responsive Design: Anpassung für kleinere Bildschirme */
