--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -2,67 +2,73 @@
     <div class="contact">
         <div class="contact-header">
             <img class="vector" src="../../assets/vectors/vector_1.png" alt="vector">
-            <h1>Contact</h1>
+            <h1>{{ 'contact.header.title' | translate }}</h1>
         </div>
         <div class="contact-content">
             <div class="contact-info">
-                <h2>Got a problem to solve?</h2>
-                <p>Contact me through this form, I am interested in hearing from you, knowing your ideas and
-                    contributing to your projects with my work.</p>
-                <p>Need a Frontend developer? <strong>Contact me!</strong></p>
+                <h2>{{ 'contact.info.problem' | translate }}</h2>
+                <p>{{ 'contact.info.description' | translate }}</p>
+                <p [innerHTML]=" 'contact.info.need_dev' | translate "></p>
             </div>
             <form class="example-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
-                <!-- Neues Eingabefeld für den Namen -->
                 <mat-form-field class="example-full-width">
-                    <mat-label>Name</mat-label>
-                    <input type="text" matInput formControlName="name" placeholder="Ex. John Doe">
+                    <mat-label>{{ 'contact.form.name.label' | translate }}</mat-label>
+                    <input type="text" matInput formControlName="name"
+                        [placeholder]=" 'contact.form.name.placeholder' | translate">
                     <mat-error *ngIf="contactForm.get('name')?.hasError('minlength')">
-                        Name must be at least 3 characters long.
+                        {{ 'contact.form.name.minlength_error' | translate }}
                     </mat-error>
                     <mat-error *ngIf="contactForm.get('name')?.hasError('required')">
-                        Name is <strong>required</strong>
+                        {{ 'contact.form.name.required_error' | translate }}
                     </mat-error>
                 </mat-form-field>
 
-                <!-- Bereits existierendes Eingabefeld für die E-Mail -->
                 <mat-form-field class="example-full-width">
-                    <mat-label>Email</mat-label>
+                    <mat-label>{{ 'contact.form.email.label' | translate }}</mat-label>
                     <input type="email" matInput formControlName="email" [errorStateMatcher]="matcher"
-                        placeholder="Ex. pat@example.com">
-                    <mat-hint>Please enter a valid email address</mat-hint>
+                        [placeholder]=" 'contact.form.email.placeholder' | translate">
+                    <mat-hint>{{ 'contact.form.email.valid_email' | translate }}</mat-hint>
                     <mat-error
                         *ngIf="contactForm.get('email')?.hasError('email') && !contactForm.get('email')?.hasError('required')">
-                        Please enter a valid email address
+                        {{ 'contact.form.email.valid_email' | translate }}
                     </mat-error>
                     <mat-error *ngIf="contactForm.get('email')?.hasError('required')">
-                        Email is <strong>required</strong>
+                        {{ 'contact.form.email.required_error' | translate }}
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field class="example-full-width">
-                    <mat-label>Send me a message</mat-label>
-                    <textarea matInput formControlName="message" placeholder="Ex. Hello, I am interested in ..."></textarea>
+                    <mat-label>{{ 'contact.form.message.label' | translate }}</mat-label>
+                    <textarea matInput formControlName="message"
+                        [placeholder]=" 'contact.form.message.placeholder' | translate"></textarea>
                     <mat-error *ngIf="contactForm.get('message')?.hasError('minlength')">
-                      Message must be at least 8 characters long.
+                        {{ 'contact.form.message.minlength_error' | translate }}
                     </mat-error>
                     <mat-error *ngIf="contactForm.get('message')?.hasError('required')">
-                      Message is <strong>required</strong>.
+                        {{ 'contact.form.message.required_error' | translate }}.
                     </mat-error>
-                  </mat-form-field>
-                  
+                </mat-form-field>
+
                 <div class="custom-checkbox">
                     <input type="checkbox" id="customCheckbox" formControlName="terms">
                     <label for="customCheckbox">
-                        I've read the
-                        <a [routerLink]="['privacy']" routerLinkActive="router-link-active" target="_blank" class="privacy-link">privacy policy</a>
-                        and agree to the processing of my data as outlined.
+                        {{ 'contact.form.terms.label' | translate }}&nbsp;
                     </label>
+                    <a [routerLink]="['/privacy']" class="privacy-link">{{ 'contact.form.terms.link' | translate }}</a>
                 </div>
-                <!-- Submit-Button -->
+
+
                 <button type="submit" [disabled]="!contactForm.valid || !contactForm.get('terms')?.value"
                     class="submit-button">
-                    Submit
+                    {{ 'contact.form.submit_button' | translate }}
                 </button>
             </form>
+
+        </div>
+        <div class="message-sent-container" [ngClass]="{'show': messageSent}">
+            <span class="message-sent">
+                {{ 'contact.form.name.message_sent' | translate }}
+            </span>
         </div>
     </div>
 </div>
