--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -2,24 +2,24 @@
     <div class="portfolio">
       <div class="portfolio-header" data-aos="fade-down"> <!-- Animation für die Header-Sektion -->
         <img class="vector1" src="../../assets/vectors/vector_1.png" alt="vector">
-        <h1>Portfolio</h1>
+        <h1>{{ 'portfolio.title' | translate }}</h1>
         <img class="vector2" src="../../assets/vectors/vector_1.png" alt="vector">
       </div>
       
       <div class="portfolio-description" data-aos="fade-up"> <!-- Animation für die Beschreibung -->
-        <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
+        <p>{{ 'portfolio.description' | translate }}</p>
       </div>
   
       <div class="portfolio-container">
         <div class="portfolio-item" data-aos="zoom-in"> <!-- Animation für das erste Portfolio-Item -->
           <img src="../../assets/img/self/join.png" alt="Project Image" class="portfolio-image">
           <div class="portfolio-text">
-            <h2>Join</h2>
-            <p class="project-tools">Angular | TypeScript | HTML | CSS | Firebase</p>
-            <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
+            <h2>{{ 'portfolio.items.join.title' | translate }}</h2>
+            <p class="project-tools">{{ 'portfolio.items.join.tools' | translate }}</p>
+            <p>{{ 'portfolio.items.join.description' | translate }}</p>
             <div class="text-buttons">
-              <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">Live test</a>
-              <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">GitHub</a>
+              <a href="https://join-kanban.de/" class="portfolio-button live-test" target="_blank">{{ 'portfolio.items.join.live_test' | translate }}</a>
+              <a href="https://github.com/RaphaelFichtinger/JOIN" class="portfolio-button github margin-zero" target="_blank">{{ 'portfolio.items.join.github' | translate }}</a>
             </div>
           </div>
         </div>
@@ -27,12 +27,12 @@
         <!-- Zweiter Abschnitt mit Text links und Bild rechts -->
         <div class="portfolio-item reverse" data-aos="zoom-in"> <!-- Animation für das zweite Portfolio-Item -->
           <div class="portfolio-text-2">
-            <h2>El pollo loco</h2>
-            <p class="project-tools">JavaScript | HTML | CSS</p>
-            <p>A simple Jump-and-Run game based on an object-oriented approach. Help Carlos to find coins and Tequila bottles to fight against the killer chickens.</p>
+            <h2>{{ 'portfolio.items.el_pollo_loco.title' | translate }}</h2>
+            <p class="project-tools">{{ 'portfolio.items.el_pollo_loco.tools' | translate }}</p>
+            <p>{{ 'portfolio.items.el_pollo_loco.description' | translate }}</p>
             <div class="text-buttons">
-              <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">GitHub</a>
-              <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">Live test</a>
+              <a href="https://github.com/NastosStavros/El-Pollo-loco.git" class="portfolio-button github" target="_blank">{{ 'portfolio.items.el_pollo_loco.github' | translate }}</a>
+              <a href="https://el-pollo-loco.de/" class="portfolio-button live-test margin-zero" target="_blank">{{ 'portfolio.items.el_pollo_loco.live_test' | translate }}</a>
             </div>
           </div>
           <img src="../../assets/img/self/pollo_loco.png" alt="Project Image" class="portfolio-image">
