--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -1,55 +1,93 @@
 .privacy {
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: auto;
-    background-color: #141D2F;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    padding: 140px;
-    text-align: start;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  background-color: #141D2F;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  padding: 58px;
+  text-align: start;
 }
 
 .back-button {
-    top: 20px;
-    left: 20px;
-    background-color: #70E61C;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-    z-index: 1000; /* Make sure the button stays on top */
-    margin-left: 100px;
-  }
-  
-  .back-button:hover {
-    background-color: #9747FF;
+  top: 20px;
+  left: 20px;
+  background-color: #70E61C;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  z-index: 1000;
+  /* Make sure the button stays on top */
+  margin-left: 100px;
+}
+
+.back-button:hover {
+  background-color: #9747FF;
+}
+
+h1 {
+  color: white;
+  font-size: 32px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 700;
+}
+
+/* Header-Styling */
+.header {
+  position: fixed;
+  /* Fixiert den Header am oberen Bildschirmrand */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  /* Volle Breite */
+  background-color: #141D2F;
+  /* Hintergrundfarbe */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 109.03px;
+  /* Höhe des Headers */
+  z-index: 1000;
+  /* Stellt sicher, dass der Header über anderen Inhalten liegt */
+}
+
+.language-toggle {
+  background: none; /* Kein Hintergrund */
+  border: none; /* Keine Border */
+  color: white; /* Textfarbe */
+  font-size: 24px; /* Schriftgröße */
+  font-weight: bold; /* Fett
+  cursor: pointer; /* Zeiger-Cursor */
+  padding: 10px; /* Innenabstand für etwas mehr Klickfläche */
+  transition: color 0.3s; /* Übergang für die Textfarbe */
+}
+
+.language-toggle:hover {
+  color: #70E61C; /* Hover-Farbe */
+  cursor: pointer;
+}
+
+
+
+@media screen and (max-width: 500px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    button {
+      margin-left: 0;
+    }
   }
 
-  h1 {
-    color: white;
-    font-size: 32px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 700;
+  .privacy {
+    margin-top: 100px;
   }
-  
-  /* Header-Styling */
-  .header {
-    position: fixed; /* Fixiert den Header am oberen Bildschirmrand */
-    top: 0;
-    left: 0;
-    width: 100vw; /* Volle Breite */
-    background-color: #141D2F; /* Hintergrundfarbe */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 109.03px; /* Höhe des Headers */
-    z-index: 1000; /* Stellt sicher, dass der Header über anderen Inhalten liegt */
-  }
-  
+}
