--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,6 +1,6 @@
 <div class="header">
+  <button class="back-button" [routerLink]="['']"><img src="../../assets/icons/arrow_up.png" alt=""></button>
   <h1>{{ 'impressum.header.name' | translate }}</h1>
-  <button class="impressum-button" [routerLink]="['']">{{ 'impressum.header.button' | translate }}</button>
   <button class="language-toggle" (click)="switchLanguage()">
     {{ translateService.currentLang === 'de' ? 'EN' : 'DE' }}
   </button>
