--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -3,29 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 81vh;
     background-color: #141D2F;
     color: white;
     font-size: 18px;
-}
-
-.impressum-button {
-    text-align: center;
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 24px;
-    font-weight: 400;
-    color: white;
-    background-color: #1e2a38;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    background-color: #70E61C;
-
-    &:hover {
-        background-color: #9747FF;
-    }
 }
 
 h1 {
@@ -64,6 +45,40 @@ h1 {
     color: #70E61C; /* Hover-Farbe */
     cursor: pointer;
   }
+
+  .back-button {
+    background-color: none;
+    background: none;
+    color: white;
+    font-size: 22px;
+    border: none;
+    border-radius: 50%;
+    transition: all 0.4s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: rotate(270deg);
+
+    .img {
+        width: 40px;
+        height: 40px;
+    }
+
+    &:hover {
+        cursor: pointer;
+        color: #70E61C;
+        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+        /* Rotationseffekt beim Hover */
+        transform: rotate(630deg); /* Dreht um 180 Grad */
+    }
+
+    &:active {
+        transform: scale(0.95) rotate(180deg);
+        box-shadow: 0 4px 6px #70E61C;
+    }
+}
+
+
+
+
 
   @media screen and (max-width: 500px) {
     .header {
