--- a/src/app/main-content/hero/hero.component.scss
+++ b/src/app/main-content/hero/hero.component.scss
@@ -94,6 +94,14 @@
   display: flex;
   gap: 30px;
   align-items: center;
+  
+
+
+  img:hover {
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    transform: scale(1.5);
+  }
 }
 
 .vector {
