--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -12,26 +12,6 @@
   text-align: start;
 }
 
-.back-button {
-  top: 20px;
-  left: 20px;
-  background-color: #70E61C;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-  z-index: 1000;
-  /* Make sure the button stays on top */
-  margin-left: 100px;
-}
-
-.back-button:hover {
-  background-color: #9747FF;
-}
-
 h1 {
   color: white;
   font-size: 32px;
@@ -73,6 +53,37 @@ h1 {
   color: #70E61C; /* Hover-Farbe */
   cursor: pointer;
 }
+
+.back-button {
+  background-color: none;
+  background: none;
+  color: white;
+  font-size: 22px;
+  border: none;
+  border-radius: 50%;
+  transition: all 0.4s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transform: rotate(270deg);
+
+  .img {
+      width: 40px;
+      height: 40px;
+  }
+
+  &:hover {
+      cursor: pointer;
+      color: #70E61C;
+      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+      /* Rotationseffekt beim Hover */
+      transform: rotate(630deg); /* Dreht um 180 Grad */
+  }
+
+  &:active {
+      transform: scale(0.95) rotate(180deg);
+      box-shadow: 0 4px 6px #70E61C;
+  }
+}
+
 
 
 
